# cyborgdb-py

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  __init__.py  cleanup.sh  openapi.json  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: api-contract.yml  build_and_package_wheels.yml  check_api_changes.yml  python.yml  test.yml
.openapi-generator/: FILES
cyborgdb/: README.md  __init__.py  openapi_client_README.md  pyproject.toml  setup.py
cyborgdb/.openapi-generator/: FILES
cyborgdb/client/: __init__.py  client.py  encrypted_index.py  test.json
cyborgdb/docs/: BatchQueryRequest.md  CreateIndexRequest.md  CyborgdbServiceApiSchemasIndexSuccessResponseModel.md  CyborgdbServiceApiSchemasVectorsSuccessResponseModel.md  DefaultApi.md  DeleteRequest.md  ErrorResponseModel.md  GetRequest.md  GetResponseModel.md  GetResultItemModel.md  IndexConfig.md  Request.md  (+12 more)
docs/: BatchQueryRequest.md  DefaultApi.md  GetResultItemModel.md  IndexInfoResponseModel.md  QueryRequest.md  QueryResponse.md  QueryResultItem.md  Request.md  VectorItem.md
integration/: langchain.py
test/: test_batch_query_request.py  test_default_api.py  test_get_response_model.py  test_get_result_item_model.py  test_index_info_response_model.py  test_query_request.py  test_query_response.py  test_query_result_item.py  test_request.py  test_upsert_request.py  test_vector_item.py
tests/: basic_integration_tests.py  comprehensive_test.py  quick_flow_test.py  test_api_contract.py  test_client.py  test_client_lite.py  test_langchain_integration.py
(+63 files in other folders)
