[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyborgdb.openapi-client"
version = "1.0.0"
description = "CyborgDB Service"
readme = "README.md"
requires-python = ">= 3.8"
license = {text = ""}
authors = [
    {name = "OpenAPI Generator community", email = "team@openapitools.org"}
]
keywords = ["OpenAPI", "OpenAPI-Generator", "CyborgDB Service"]
dependencies = [
    "urllib3 >= 1.25.3, < 3.0.0",
    "python-dateutil >= 2.8.2",
    "pydantic >= 2",
    "typing-extensions >= 4.7.1",
]
classifiers = []

# URLs section removed to fix the validation error

[tool.setuptools]
packages = ["cyborgdb"]
package-data = {"cyborgdb.openapi_client" = ["py.typed"]}
include-package-data = true